Updated Components Partial
Shifted the order so that 'media-queries' came at the end

--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -6,5 +6,6 @@
         'form',
         'grid',
         'image',
-        'media-queries',
-        'nav';
+        'nav',
+        'media-queries';
+        
